# VoxelEngine

./: .clang-format  .gitignore  .gitmodules  BENCHMARK.md  CMakeLists.txt  Makefile  README.md  compileShaders.sh  imgui.ini
Akari/: Application.cpp  Application.h  Debug.h  EntryPoint.h  Image.cpp  Image.h  Layer.h  Signal.cpp  Signal.h  Synchronization.cpp  Synchronization.h  ThreadPool.cpp  ThreadPool.h
Akari/ImGui/: RobotoBold.embed  RobotoLight.embed  RobotoLightItalic.embed  RobotoMedium.embed
Akari/Input/: Input.cpp  Input.h  KeyCodes.h
Akari/Render/: Buffer.cpp  Buffer.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h
akari/ECS/: Entity.h  Registry.h  System.h  Utility.h
akari/RCU/: RCU.h
akari/camera/: PerspectiveCamera.cpp  PerspectiveCamera.h
akari/memory/: Allocator.h  FastAlloc.h
akari/render/: Buffer.cpp  Buffer.h  BufferPool.cpp  BufferPool.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h
akari/state/: StateMachine.cpp  StateMachine.h
akari/thread/: RCU.h  Signal.cpp  Signal.h  ThreadPool.cpp  ThreadPool.h
akari/window/: Application.cpp  Application.h  Debug.h  EntryPoint.h  Image.cpp  Image.h  Input.h  KeyCodes.h  Layer.h
app/: main.cpp
engine/: Binding.h  CameraBuffer.cpp  CameraBuffer.h  Chunk.h  ChunkManager.cpp  ChunkManager.h  Controller.cpp  Controller.h  Debug.h  Scene.cpp  Scene.h  Signal.h  UI.cpp  UI.h  World.cpp  World.h
engine/shaders/: camera.glsl  common.glsl  material.glsl  raymarch.glsl  raymarchChunks.glsl
engine/shaders/pipeline/: debug.frag.spv  debug.vert.spv  gBuffer.frag.spv  gBuffer.vert  gBuffer.vert.spv  lighting.comp  lighting.comp.spv  overlay.frag.spv  overlay.vert.spv  preprocessor.comp  preprocessor.comp.spv  shading.comp.spv
engine/voxel/: Chunk.h  ChunkManager.cpp  ChunkManager.h  Face.cpp  GreedyMesh64.h  HeightMap.cpp  HeightMap.h  Palette.cpp  Palette.h  SparseOctree.h  SparseOctreeWithoutRCU.h  Type.h  Voxel.h
experiment/: main.cpp  utility.h
old/: Node.h  SparseVoxelOctree.cpp
src/: main.cpp
src/Camera/: PerspectiveCamera.cpp  PerspectiveCamera.h
src/ECS/: Entity.h  Registry.cpp  Registry.h  System.h  Utility.h
src/Kitagawa/: Binding.h  CameraBuffer.cpp  CameraBuffer.h  ChunkManager.cpp  ChunkManager.h  Controller.cpp  Controller.h  Scene.cpp  Scene.h  UI.cpp  UI.h  World.cpp  World.h
src/Kitagawa/Render/: Binding.h  Buffer.cpp  Buffer.h  CameraBuffer.cpp  CameraBuffer.h  Pipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  XPipeline.cpp  XPipeline.h
src/Kitagawa/Render/PBR/: Renderer.cpp  Renderer.h
src/Kitagawa/Render/Pathtrace/: Renderer.cpp  Renderer.h
src/Kitagawa/Render/Raymarch/: Renderer.cpp  Renderer.h
src/Kitagawa/Render/RenderPass/: AmbientOcclusionPass.h  BilateralFilterPass.cpp  BilateralFilterPass.h  GBufferPass.cpp  GBufferPass.h  LightingPass.cpp  LightingPass.h  ReflectionPass.h  ShadingPass.cpp  ShadingPass.h  ShadowPass.cpp  ShadowPass.h  XGBufferPass.cpp  XGBufferPass.h
src/Kitagawa/Render/RenderPass/AmbientOcclusion/: SSAOPass.cpp  SSAOPass.h
src/Kitagawa/Render/RenderPass/Reflection/: SSRPass.cpp  SSRPass.h
src/RCU/: RCU.h
src/Shaders/: camera.glsl  common.glsl  material.glsl  raymarch.glsl
src/Shaders/Pathtrace/: pathtrace.comp  pathtrace.comp.spv
src/Shaders/Pipeline/: bilateralFilter.comp  bilateralFilter.comp.spv  debug.frag.spv  debug.vert  debug.vert.spv  gBuffer.comp  gBuffer.comp.spv  gBuffer.frag  gBuffer.frag.spv  gBuffer.vert  gBuffer.vert.spv  lighting.comp  lighting.comp.spv  overlay.frag  overlay.frag.spv  overlay.vert  overlay.vert.spv  shading.comp  shading.comp.spv  shadow.comp  shadow.comp.spv  ssao.comp  ssao.comp.spv  ssr.comp  ssr.comp.spv
src/Shaders/Pipeline2/: debug.frag  debug.frag.spv  debug.vert  debug.vert.spv  gBuffer.frag  gBuffer.frag.spv  gBuffer.vert  gBuffer.vert.spv  lighting.comp  lighting.comp.spv  overlay.frag.spv  overlay.vert.spv  shading.comp  shading.comp.spv
src/Shaders/Raymarch/: ddgi.comp  ddgi.comp.spv  ddgi.glsl  raymarch.comp  raymarch.comp.spv  shading.comp  shading.comp.spv
src/Utility/: Debug.h  IVecMutex.cpp  IVecMutex.h  Utility.h
src/Voxel/: Face.cpp  Face.h  GreedyMesh32.cpp  GreedyMesh32.h  GreedyMesh64.cpp  GreedyMesh64.h  HeightMap.cpp  HeightMap.h  Node.cpp  Node.h  Palette.cpp  Palette.h  SparseOctree.h  SparseVoxelOctree.cpp  SparseVoxelOctree.h  Type.h  Voxel.cpp  Voxel.h
